Overflow fixed

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -42,6 +42,7 @@ html {
     width: 100%;
     height: 100%;
     font-size: 10px;
+    overflow-x: hidden;
 }
 
 
@@ -61,6 +62,7 @@ body {
     max-width: 100vw;
     height: 100vh;
     max-height: 80rem;
+
 
 }
 
